[package]
name = "taskmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"]}
clap = "4.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"